--- a/index.html
+++ b/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <meta charset="utf-8">
-        <meta name="author" content="Felipe Montoya R. <femonres@gmail.com>">
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta name="author" content="Felipe Montoya R. (femonres@gmail.com)">
         <title>Comenzando con la fotografía</title>
-        <link type="text/css" rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="./css/estilos.css" type="text/css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script">
     </head>
     <body>
-        <!-- Cabecera de la pagina -->
-        <header></header>
-        <!-- Contenido de la pagina -->
-        <section></section>
-        <!-- Footer de la pagina -->
-        <footer>
-            <hr />
-            <ul>
-                <li><strong>Correo: </strong><a href="mailto:femonres@gmail.com?Subject=Hola%20desde%20HTML">femonres@gmail.com</a></li>
-                <li><strong>Celular: </strong>321-654-1254</li>
-            </ul>
-        </footer>
+        <div class="contenido">
+            <!-- Cabecera de la pagina -->
+            <header>
+                <h1 class="nav_title">Comenzando con la fotografía</h1>
+                <nav class="nav_bar">
+                    <a href="./index.html" class="active">Inicio</a>
+                    <a href="./paisajes.html" class="inactive">Paisajes</a>
+                    <a href="./retratos.html" class="inactive"></a>
+                </nav>
+            </header>
+            <!-- Contenido de la pagina -->
+            <section></section>
+            <!-- Footer de la pagina -->
+            <footer>
+                <hr />
+                <ul>
+                    <li><span><strong>Correo: </strong><a href="mailto:femonres@gmail.com?Subject=Hola%20desde%20HTML">femonres@gmail.com</a></span></li>
+                    <li><span><strong>Celular: </strong><a href="tel:+573216541254">321-654-1254</a></span></li>
+                    <li><span><strong>GitHub: </strong><a href="https://github.com/femonres">GitHub</a></span></li>
+                </ul>
+            </footer>
+        </div>        
     </body>
 </html>
