--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="contenido">
             <!-- Cabecera de la pagina -->
-            <header>
+            <header id="header">
                 <div class="nav_title">
                     <h1>Comenzando con la fotografía</h1>
                 </div>
@@ -19,24 +19,45 @@
                     <nav>
                         <a href="index.html" class="active">Inicio</a>
                         <a href="paisajes.html" class="inactive">Paisajes</a>
-                        <a href="retratos.html" class="inactive"></a>
+                        <a href="retratos.html" class="inactive">Retratos</a>
                     </nav>
                 </div>
             </header>
             <!-- Contenido de la pagina -->
             <section id="seccion_central">
-                <img src="img/imagen_central.jpg" alt="Imagen Central">
+                <figure><img src="img/imagen_central.jpg" alt="Imagen Central"></figure>
             </section>
             
-            <section id="seccion_secundaria"></section>
+            <section id="seccion_secundaria">
+                <div><img src="img/paisaje_1.jpg" alt="Imagen segundaria izquierda" class="rotacion"></div>
+                <div><img src="img/retratos_1.jpg" alt="Imagen segundaria derecha" class="traslacion"></div>
+            </section>
             <!-- Footer de la pagina -->
             <footer id="footer">
-                <hr />
-                <ul>
-                    <li><span><strong>Correo: </strong><a href="mailto:femonres@gmail.com?Subject=Hola%20desde%20HTML">femonres@gmail.com</a></span></li>
-                    <li><span><strong>Celular: </strong><a href="tel:+573216541254">321-654-1254</a></span></li>
-                    <li><span><strong>GitHub: </strong><a href="https://github.com/femonres">GitHub</a></span></li>
-                </ul>
+                <div id="contacto">
+                    <h3>Contacto</h3>
+                    <ul>
+                        <li><span><strong>Correo: </strong><a href="mailto:femonres@gmail.com?Subject=Hola%20desde%20HTML">femonres@gmail.com</a></span></li>
+                        <li><span><strong>Dirección: </strong>Mi dirección donde ubicarme</span></li>
+                        <li><span><strong>Celular: </strong><a href="tel:+573216541254">321-654-1254</a></span></li>
+                    </ul>
+                </div>
+                <div id="terminos">
+                    <h3>Términos</h3>
+                    <p>Los terminos y condiciones de la pagina</p>
+                </div>
+                <div id="redes_sociales">
+                    <h3>Redes Sociales</h3>
+                    <ul>
+                        <li><a href="https://facebook.com/femonres"><img src="icons/facebook.png" alt="Facebook Icon" class="icons"> Facebook</a></li>
+                        <li><a href="https://twiter.com/femonres"><img src="icons/twitter.png" alt="Twitter Icon" class="icons"> Twitter</a></li>
+                        <li><a href="https://github.com/femonres"><img src="icons/github.png" alt="GitHub Icon" class="icons"> GitHub</a></li>
+                    </ul>
+                </div>
+                <div id="derechos">
+                    <h3>Derechos</h3>
+                    <p>&copy; Copyright 2018</p>
+                </div>
             </footer>
         </div>        
     </body>
