Pagina Index y estilos CSS funcionando segun lo esperado

--- a/index.html
+++ b/index.html
@@ -29,9 +29,16 @@
             </section>
             
             <section id="seccion_secundaria">
-                <div><img src="img/paisaje_1.jpg" alt="Imagen segundaria izquierda" class="rotacion"></div>
-                <div><img src="img/retratos_1.jpg" alt="Imagen segundaria derecha" class="traslacion"></div>
+                <figure>
+                    <p>Paisajes</p>
+                    <a href="paisajes.html"><img src="img/paisaje_1.jpg" alt="Imagen segundaria izquierda" class="rotacion"></a>
+                </figure>
+                <figure>
+                    <p>Retratos</p>
+                    <a href="retratos.html"><img src="img/retratos_1.jpg" alt="Imagen segundaria derecha" class="traslacion"></a>
+                </figure>
             </section>
+
             <!-- Footer de la pagina -->
             <footer id="footer">
                 <div id="contacto">
